fixup title wrap on index

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -5,7 +5,6 @@
 
 .cover {
   width: 100px;
-  float: left;
   margin-right: 20px;
 }
 
@@ -41,4 +40,9 @@ blockquote {
     width: 100%;
     height: 100%;
     border: 0;
+}
+
+.img-container {
+  height: 100%;
+  float: left;
 }
